# MikenekoAndron

./: README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
backend/alembic/: env.py
backend/alembic/versions/: 1065ed638c89_initial_migration.py  62e45a035a49_add_table_users_articles_images.py
frontend/: .prettierrc.json  Dockerfile  package-lock.json  package.json
frontend/components/: ArticleCard.tsx  CreateArticleButton.tsx  DeleteArticleButton.tsx  EditArticleButton.tsx  Footer.tsx  Header.tsx  ImageFetcher.tsx  LoginButton.tsx  MailToIcon.tsx  SlideShow.tsx
frontend/pages/: about.tsx  blog.tsx  index.tsx  login.tsx  signup.tsx  works.tsx
frontend/pages/original/: index.tsx  login.tsx  signup.tsx
frontend/styles/: Home.module.css  globals.css
